# BoltzEngine

./: .gitignore  package-lock.json
cpp/: AdditionExpr.cpp  AdditionExpr.hpp  BinaryGenerator.cpp  BinaryGenerator.hpp  CMakeLists.txt  DivisionExpr.cpp  DivisionExpr.hpp  EngineApp.cpp  EngineApp.h  EngineUtils.cpp  EngineUtils.hpp  Enums.h  ExprGenerator.cpp  ExprGenerator.hpp  ExprGeneratorTest.cpp  ExprToken.cpp  ExprToken.hpp  FactorizationGenerator.cpp  FactorizationGenerator.hpp  HexGenerator.cpp  HexGenerator.hpp  InfixConverter.cpp  InfixConverter.h  LatexConverter.cpp  LatexConverter.hpp  MathExpr.cpp  MathExpr.hpp  ModulusExpr.cpp  ModulusExpr.hpp  MultiplicationExpr.cpp  MultiplicationExpr.hpp  SubtractionExpr.cpp  SubtractionExpr.hpp  exprtk_test.cpp  test.cpp  utils.h
cpp/expressions/: AdditionExpr.hpp  CMakeLists.txt  DivisionExpr.cpp  DivisionExpr.hpp  ExprGenerator.cpp  ExprGenerator.hpp  ExprGeneratorTest.cpp  ExprToken.hpp  MathExpr.cpp  MathExpr.hpp  ModulusExpr.cpp  ModulusExpr.hpp  MultiplicationExpr.cpp  MultiplicationExpr.hpp  SubtractionExpr.cpp  SubtractionExpr.hpp
kotlin/src/main/java/com/arsalabangash/boltzengine/engine/: EngineTest.kt  LatexConverter.kt
kotlin/src/main/java/com/arsalabangash/boltzengine/engine/expressions/: DivisionExpr.kt  ExprGenerator.kt  MathExpr.kt  MultiplicationExpr.kt  SubtractionExpr.kt
typescript/: package-lock.json  package.json  tsconfig.json  tslint.json
typescript/src/: index.ts  utils.ts
typescript/src/math_questions/: expression.ts  factorization.ts
typescript/src/math_questions/expression/: addition.ts  generator.ts  multiplication.ts  subtraction.ts  utils.ts
typescript/src/models/: math_question.ts
